# acaiteria-gestao-backend

./: .env  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/application/dtos/: command_dto.py  dashboard_dto.py  expense_dto.py  product_dto.py  report_dto.py  sales_dto.py
app/application/repositories/: command_repository.py  expense_repository.py  product_repository.py
app/application/services/: command_service.py  product_service.py
app/core/: config.py  database.py
app/domain/: enums.py
app/domain/entities/: command.py  command_item.py  expense.py  product.py
app/domain/enums/: command_status.py  product_catetgory.py
app/domain/excpetions/: exception.py
app/insfrastructure/: models.py
